// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`InputField [NEGATIVE] should prevent user input while field is disabled 1`] = `
.c0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  gap: 0.5rem;
  margin-top: 5px;
}

.c5 > svg {
  position: relative;
  bottom: 2.6875rem;
  left: calc(100% - 0.5rem);
}

.c5 > svg path {
  fill: #A1A1A1;
}

.c4 {
  font-family: Inter,sans-serif;
  font-size: 1rem;
  line-height: 1.5rem;
  font-weight: 400;
  font-style: normal;
  color: #474747;
  box-sizing: border-box;
  height: 3.5rem;
  width: 100%;
  margin: 0;
  padding: 1rem;
  background-color: #FFFFFF;
  border: 0.0625rem solid rgba(0,0,0,0.08);
  border-radius: 0.25rem;
  -webkit-transition: border 300ms cubic-bezier(0.45,0.05,0,1);
  transition: border 300ms cubic-bezier(0.45,0.05,0,1);
  caret-color: #4475E3;
}

.c4:hover:enabled {
  border-color: #2F65E0;
}

.c4:active:enabled,
.c4:focus-visible {
  outline: none;
  border-color: #4475E3;
}

.c4:disabled {
  color: rgba(0,0,0,0.38);
  border-color: transparent;
  background-color: #f8f8f8;
}

.c4::-webkit-input-placeholder {
  color: #808080;
}

.c4::-moz-placeholder {
  color: #808080;
}

.c4:-ms-input-placeholder {
  color: #808080;
}

.c4::placeholder {
  color: #808080;
}

.c4:disabled::-webkit-input-placeholder {
  color: #DBDBDB;
}

.c4:disabled::-moz-placeholder {
  color: #DBDBDB;
}

.c4:disabled:-ms-input-placeholder {
  color: #DBDBDB;
}

.c4:disabled::placeholder {
  color: #DBDBDB;
}

.c4:-webkit-autofill,
.c4:-webkit-autofill:hover,
.c4:-webkit-autofill:focus {
  border: 0.0625rem solid rgba(219,219,219,0.2);
  -webkit-transition: background-color 5000s ease-in-out 0s;
  transition: background-color 5000s ease-in-out 0s;
  background-color: #FFFFFF !important;
  background-image: unset !important;
  -webkit-text-fill-color: #838383;
}

.c4:-webkit-autofill:focus {
  border-color: #4475E3;
}

.c2 {
  max-height: 3.5rem;
}

.c2:hover .c3:enabled {
  border-color: #2F65E0;
}

.c1 {
  font-family: Inter,sans-serif;
  font-size: 0.875rem;
  line-height: 1.3125rem;
  font-weight: 600;
  font-style: normal;
  color: rgba(0,0,0,0.38);
  gap: 0.5rem;
  height: 1.125rem;
  width: -webkit-fit-content;
  width: -moz-fit-content;
  width: fit-content;
  position: static;
}

.c1::before {
  content: '';
  position: absolute;
  color: red;
  top: -2px;
  right: -10px;
}

.c6 {
  font-family: Inter,sans-serif;
  font-size: 0.625rem;
  line-height: 0.9375rem;
  font-weight: 400;
  font-style: normal;
  color: #808080;
  height: 1.0625rem;
  margin-top: -5px;
}

<body>
  <div>
    <div
      class="c0"
    >
      <span
        class="c1"
        data-testid="input-description"
      >
         
      </span>
      <div
        class="c2"
      >
        <input
          class="c3 c4"
          data-testid="input"
          disabled=""
          value="disabled"
        />
        <div
          class="c5"
          disabled=""
        />
      </div>
      <div
        class="c6"
      >
         
      </div>
    </div>
  </div>
</body>
`;

exports[`InputField [NEGATIVE] should render with wrong props 1`] = `
.c0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  gap: 0.5rem;
  margin-top: 5px;
}

.c5 > svg {
  position: relative;
  bottom: 2.6875rem;
  left: calc(100% - 0.5rem);
}

.c4 {
  font-family: Inter,sans-serif;
  font-size: 1rem;
  line-height: 1.5rem;
  font-weight: 400;
  font-style: normal;
  color: #474747;
  box-sizing: border-box;
  height: 3.5rem;
  width: 100%;
  margin: 0;
  padding: 1rem;
  background-color: #FFFFFF;
  border: 0.0625rem solid rgba(0,0,0,0.08);
  border-radius: 0.25rem;
  -webkit-transition: border 300ms cubic-bezier(0.45,0.05,0,1);
  transition: border 300ms cubic-bezier(0.45,0.05,0,1);
  caret-color: #4475E3;
}

.c4:hover:enabled {
  border-color: #2F65E0;
}

.c4:active:enabled,
.c4:focus-visible {
  outline: none;
  border-color: #4475E3;
}

.c4:disabled {
  color: rgba(0,0,0,0.38);
  border-color: transparent;
  background-color: #f8f8f8;
}

.c4::-webkit-input-placeholder {
  color: #808080;
}

.c4::-moz-placeholder {
  color: #808080;
}

.c4:-ms-input-placeholder {
  color: #808080;
}

.c4::placeholder {
  color: #808080;
}

.c4:disabled::-webkit-input-placeholder {
  color: #DBDBDB;
}

.c4:disabled::-moz-placeholder {
  color: #DBDBDB;
}

.c4:disabled:-ms-input-placeholder {
  color: #DBDBDB;
}

.c4:disabled::placeholder {
  color: #DBDBDB;
}

.c4:-webkit-autofill,
.c4:-webkit-autofill:hover,
.c4:-webkit-autofill:focus {
  border: 0.0625rem solid #4475E3;
  -webkit-transition: background-color 5000s ease-in-out 0s;
  transition: background-color 5000s ease-in-out 0s;
  background-color: #FFFFFF !important;
  background-image: unset !important;
  -webkit-text-fill-color: #838383;
}

.c4:-webkit-autofill:focus {
  border-color: #4475E3;
}

.c2 {
  max-height: 3.5rem;
}

.c2:hover .c3:enabled {
  border-color: #2F65E0;
}

.c1 {
  font-family: Inter,sans-serif;
  font-size: 0.875rem;
  line-height: 1.3125rem;
  font-weight: 600;
  font-style: normal;
  color: #474747;
  gap: 0.5rem;
  height: 1.125rem;
  width: -webkit-fit-content;
  width: -moz-fit-content;
  width: fit-content;
  position: static;
}

.c1::before {
  content: '';
  position: absolute;
  color: red;
  top: -2px;
  right: -10px;
}

.c6 {
  font-family: Inter,sans-serif;
  font-size: 0.625rem;
  line-height: 0.9375rem;
  font-weight: 400;
  font-style: normal;
  color: #808080;
  height: 1.0625rem;
  margin-top: -5px;
}

<body>
  <div>
    <div
      class="c0"
    >
      <span
        class="c1"
        data-testid="input-description"
      >
         
      </span>
      <div
        class="c2"
      >
        <input
          class="c3 c4"
          data-testid="input"
          readonly=""
          value=""
        />
        <div
          class="c5"
        />
      </div>
      <div
        class="c6"
      >
         
      </div>
    </div>
  </div>
</body>
`;

exports[`InputField [NEGATIVE] should render without props 1`] = `
.c0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  gap: 0.5rem;
  margin-top: 5px;
}

.c5 > svg {
  position: relative;
  bottom: 2.6875rem;
  left: calc(100% - 0.5rem);
}

.c4 {
  font-family: Inter,sans-serif;
  font-size: 1rem;
  line-height: 1.5rem;
  font-weight: 400;
  font-style: normal;
  color: #474747;
  box-sizing: border-box;
  height: 3.5rem;
  width: 100%;
  margin: 0;
  padding: 1rem;
  background-color: #FFFFFF;
  border: 0.0625rem solid rgba(0,0,0,0.08);
  border-radius: 0.25rem;
  -webkit-transition: border 300ms cubic-bezier(0.45,0.05,0,1);
  transition: border 300ms cubic-bezier(0.45,0.05,0,1);
  caret-color: #4475E3;
}

.c4:hover:enabled {
  border-color: #2F65E0;
}

.c4:active:enabled,
.c4:focus-visible {
  outline: none;
  border-color: #4475E3;
}

.c4:disabled {
  color: rgba(0,0,0,0.38);
  border-color: transparent;
  background-color: #f8f8f8;
}

.c4::-webkit-input-placeholder {
  color: #808080;
}

.c4::-moz-placeholder {
  color: #808080;
}

.c4:-ms-input-placeholder {
  color: #808080;
}

.c4::placeholder {
  color: #808080;
}

.c4:disabled::-webkit-input-placeholder {
  color: #DBDBDB;
}

.c4:disabled::-moz-placeholder {
  color: #DBDBDB;
}

.c4:disabled:-ms-input-placeholder {
  color: #DBDBDB;
}

.c4:disabled::placeholder {
  color: #DBDBDB;
}

.c4:-webkit-autofill,
.c4:-webkit-autofill:hover,
.c4:-webkit-autofill:focus {
  border: 0.0625rem solid #4475E3;
  -webkit-transition: background-color 5000s ease-in-out 0s;
  transition: background-color 5000s ease-in-out 0s;
  background-color: #FFFFFF !important;
  background-image: unset !important;
  -webkit-text-fill-color: #838383;
}

.c4:-webkit-autofill:focus {
  border-color: #4475E3;
}

.c2 {
  max-height: 3.5rem;
}

.c2:hover .c3:enabled {
  border-color: #2F65E0;
}

.c1 {
  font-family: Inter,sans-serif;
  font-size: 0.875rem;
  line-height: 1.3125rem;
  font-weight: 600;
  font-style: normal;
  color: #474747;
  gap: 0.5rem;
  height: 1.125rem;
  width: -webkit-fit-content;
  width: -moz-fit-content;
  width: fit-content;
  position: static;
}

.c1::before {
  content: '';
  position: absolute;
  color: red;
  top: -2px;
  right: -10px;
}

.c6 {
  font-family: Inter,sans-serif;
  font-size: 0.625rem;
  line-height: 0.9375rem;
  font-weight: 400;
  font-style: normal;
  color: #808080;
  height: 1.0625rem;
  margin-top: -5px;
}

<body>
  <div>
    <div
      class="c0"
    >
      <span
        class="c1"
        data-testid="input-description"
      >
         
      </span>
      <div
        class="c2"
      >
        <input
          class="c3 c4"
          data-testid="input"
        />
        <div
          class="c5"
        />
      </div>
      <div
        class="c6"
      >
         
      </div>
    </div>
  </div>
</body>
`;

exports[`InputField [NEGATIVE] test InputField disabled state 1`] = `
.c0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  gap: 0.5rem;
  margin-top: 5px;
}

.c5 > svg {
  position: relative;
  bottom: 2.6875rem;
  left: calc(100% - 0.5rem);
}

.c5 > svg path {
  fill: #A1A1A1;
}

.c4 {
  font-family: Inter,sans-serif;
  font-size: 1rem;
  line-height: 1.5rem;
  font-weight: 400;
  font-style: normal;
  color: #474747;
  box-sizing: border-box;
  height: 3.5rem;
  width: 100%;
  margin: 0;
  padding: 1rem;
  background-color: #FFFFFF;
  border: 0.0625rem solid rgba(0,0,0,0.08);
  border-radius: 0.25rem;
  -webkit-transition: border 300ms cubic-bezier(0.45,0.05,0,1);
  transition: border 300ms cubic-bezier(0.45,0.05,0,1);
  caret-color: #4475E3;
}

.c4:hover:enabled {
  border-color: #2F65E0;
}

.c4:active:enabled,
.c4:focus-visible {
  outline: none;
  border-color: #4475E3;
}

.c4:disabled {
  color: rgba(0,0,0,0.38);
  border-color: transparent;
  background-color: #f8f8f8;
}

.c4::-webkit-input-placeholder {
  color: #808080;
}

.c4::-moz-placeholder {
  color: #808080;
}

.c4:-ms-input-placeholder {
  color: #808080;
}

.c4::placeholder {
  color: #808080;
}

.c4:disabled::-webkit-input-placeholder {
  color: #DBDBDB;
}

.c4:disabled::-moz-placeholder {
  color: #DBDBDB;
}

.c4:disabled:-ms-input-placeholder {
  color: #DBDBDB;
}

.c4:disabled::placeholder {
  color: #DBDBDB;
}

.c4:-webkit-autofill,
.c4:-webkit-autofill:hover,
.c4:-webkit-autofill:focus {
  border: 0.0625rem solid rgba(219,219,219,0.2);
  -webkit-transition: background-color 5000s ease-in-out 0s;
  transition: background-color 5000s ease-in-out 0s;
  background-color: #FFFFFF !important;
  background-image: unset !important;
  -webkit-text-fill-color: #838383;
}

.c4:-webkit-autofill:focus {
  border-color: #4475E3;
}

.c2 {
  max-height: 3.5rem;
}

.c2:hover .c3:enabled {
  border-color: #2F65E0;
}

.c1 {
  font-family: Inter,sans-serif;
  font-size: 0.875rem;
  line-height: 1.3125rem;
  font-weight: 600;
  font-style: normal;
  color: rgba(0,0,0,0.38);
  gap: 0.5rem;
  height: 1.125rem;
  width: -webkit-fit-content;
  width: -moz-fit-content;
  width: fit-content;
  position: static;
}

.c1::before {
  content: '';
  position: absolute;
  color: red;
  top: -2px;
  right: -10px;
}

.c6 {
  font-family: Inter,sans-serif;
  font-size: 0.625rem;
  line-height: 0.9375rem;
  font-weight: 400;
  font-style: normal;
  color: #808080;
  height: 1.0625rem;
  margin-top: -5px;
}

<body>
  <div>
    <div
      class="c0"
    >
      <span
        class="c1"
        data-testid="input-description"
      >
         
      </span>
      <div
        class="c2"
      >
        <input
          class="c3 c4"
          data-testid="input"
          disabled=""
          value="disabled"
        />
        <div
          class="c5"
          disabled=""
        />
      </div>
      <div
        class="c6"
      >
         
      </div>
    </div>
  </div>
</body>
`;

exports[`InputField [NEGATIVE] test InputField error state 1`] = `
.c0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  gap: 0.5rem;
  margin-top: 5px;
}

.c5 > svg {
  position: relative;
  bottom: 2.6875rem;
  left: calc(100% - 0.5rem);
}

.c4 {
  font-family: Inter,sans-serif;
  font-size: 1rem;
  line-height: 1.5rem;
  font-weight: 400;
  font-style: normal;
  color: #D14343;
  box-sizing: border-box;
  height: 3.5rem;
  width: 100%;
  margin: 0;
  padding: 1rem;
  background-color: #FFEBEB;
  border: 0.0625rem solid rgba(0,0,0,0.08);
  border-radius: 0.25rem;
  -webkit-transition: border 300ms cubic-bezier(0.45,0.05,0,1);
  transition: border 300ms cubic-bezier(0.45,0.05,0,1);
  caret-color: #D14343;
}

.c4:hover:enabled {
  border-color: transparent;
}

.c4:active:enabled,
.c4:focus-visible {
  outline: none;
  border-color: transparent;
}

.c4:disabled {
  color: rgba(0,0,0,0.38);
  border-color: transparent;
  background-color: #f8f8f8;
}

.c4::-webkit-input-placeholder {
  color: #808080;
}

.c4::-moz-placeholder {
  color: #808080;
}

.c4:-ms-input-placeholder {
  color: #808080;
}

.c4::placeholder {
  color: #808080;
}

.c4:disabled::-webkit-input-placeholder {
  color: #DBDBDB;
}

.c4:disabled::-moz-placeholder {
  color: #DBDBDB;
}

.c4:disabled:-ms-input-placeholder {
  color: #DBDBDB;
}

.c4:disabled::placeholder {
  color: #DBDBDB;
}

.c4:-webkit-autofill,
.c4:-webkit-autofill:hover,
.c4:-webkit-autofill:focus {
  border: 0.0625rem solid #FFEBEB;
  -webkit-transition: background-color 5000s ease-in-out 0s;
  transition: background-color 5000s ease-in-out 0s;
  background-color: #FFEBEB !important;
  background-image: unset !important;
  -webkit-text-fill-color: #838383;
}

.c4:-webkit-autofill:focus {
  border-color: transparent;
}

.c2 {
  max-height: 3.5rem;
}

.c2:hover .c3:enabled {
  border-color: transparent;
}

.c1 {
  font-family: Inter,sans-serif;
  font-size: 0.875rem;
  line-height: 1.3125rem;
  font-weight: 600;
  font-style: normal;
  color: #D14343;
  gap: 0.5rem;
  height: 1.125rem;
  width: -webkit-fit-content;
  width: -moz-fit-content;
  width: fit-content;
  position: static;
}

.c1::before {
  content: '';
  position: absolute;
  color: red;
  top: -2px;
  right: -10px;
}

.c6 {
  font-family: Inter,sans-serif;
  font-size: 0.875rem;
  line-height: 1.3125rem;
  font-weight: 400;
  font-style: normal;
  color: #D14343;
  padding-left: 1rem;
  height: 1.0625rem;
  margin-bottom: 10px;
}

<body>
  <div>
    <div
      class="c0"
    >
      <span
        class="c1"
        data-testid="input-description"
      >
         
      </span>
      <div
        class="c2"
      >
        <input
          class="c3 c4"
          data-testid="input"
        />
        <div
          class="c5"
        />
      </div>
      <div
        class="c6"
        data-testid="input-error"
      />
    </div>
  </div>
</body>
`;

exports[`InputField type and clear InputField test 1`] = `
.c0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  gap: 0.5rem;
  margin-top: 5px;
}

.c5 > svg {
  position: relative;
  bottom: 2.6875rem;
  left: calc(100% - 0.5rem);
}

.c4 {
  font-family: Inter,sans-serif;
  font-size: 1rem;
  line-height: 1.5rem;
  font-weight: 400;
  font-style: normal;
  color: #474747;
  box-sizing: border-box;
  height: 3.5rem;
  width: 100%;
  margin: 0;
  padding: 1rem;
  background-color: #FFFFFF;
  border: 0.0625rem solid rgba(0,0,0,0.08);
  border-radius: 0.25rem;
  -webkit-transition: border 300ms cubic-bezier(0.45,0.05,0,1);
  transition: border 300ms cubic-bezier(0.45,0.05,0,1);
  caret-color: #4475E3;
}

.c4:hover:enabled {
  border-color: #2F65E0;
}

.c4:active:enabled,
.c4:focus-visible {
  outline: none;
  border-color: #4475E3;
}

.c4:disabled {
  color: rgba(0,0,0,0.38);
  border-color: transparent;
  background-color: #f8f8f8;
}

.c4::-webkit-input-placeholder {
  color: #808080;
}

.c4::-moz-placeholder {
  color: #808080;
}

.c4:-ms-input-placeholder {
  color: #808080;
}

.c4::placeholder {
  color: #808080;
}

.c4:disabled::-webkit-input-placeholder {
  color: #DBDBDB;
}

.c4:disabled::-moz-placeholder {
  color: #DBDBDB;
}

.c4:disabled:-ms-input-placeholder {
  color: #DBDBDB;
}

.c4:disabled::placeholder {
  color: #DBDBDB;
}

.c4:-webkit-autofill,
.c4:-webkit-autofill:hover,
.c4:-webkit-autofill:focus {
  border: 0.0625rem solid #4475E3;
  -webkit-transition: background-color 5000s ease-in-out 0s;
  transition: background-color 5000s ease-in-out 0s;
  background-color: #FFFFFF !important;
  background-image: unset !important;
  -webkit-text-fill-color: #838383;
}

.c4:-webkit-autofill:focus {
  border-color: #4475E3;
}

.c2 {
  max-height: 3.5rem;
}

.c2:hover .c3:enabled {
  border-color: #2F65E0;
}

.c1 {
  font-family: Inter,sans-serif;
  font-size: 0.875rem;
  line-height: 1.3125rem;
  font-weight: 600;
  font-style: normal;
  color: #474747;
  gap: 0.5rem;
  height: 1.125rem;
  width: -webkit-fit-content;
  width: -moz-fit-content;
  width: fit-content;
  position: static;
}

.c1::before {
  content: '';
  position: absolute;
  color: red;
  top: -2px;
  right: -10px;
}

.c6 {
  font-family: Inter,sans-serif;
  font-size: 0.625rem;
  line-height: 0.9375rem;
  font-weight: 400;
  font-style: normal;
  color: #808080;
  height: 1.0625rem;
  margin-top: -5px;
}

<body>
  <div>
    <div
      class="c0"
    >
      <span
        class="c1"
        data-testid="input-description"
      >
         
      </span>
      <div
        class="c2"
      >
        <input
          class="c3 c4"
          data-testid="input"
        />
        <div
          class="c5"
        />
      </div>
      <div
        class="c6"
      >
         
      </div>
    </div>
  </div>
</body>
`;
